# maestro

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.codex/: README.md
.github/: pull_request_template.md
archetypes/: api_service.yaml  saas_app.yaml
docs/: architecture.md  benchmark_demos.md  commercial_control_plane.md  contributing.md  developer_guide.md  examples.md  getting_started.md  index.md  oss_adoption.md  usage.md
examples/: brief.md  hello_world_cli_game_brief.md  maestro.example.yaml  maestro.openai.yaml  maestro.real-providers.yaml  oxo_cli_game_brief.md
examples/hello_world_cli_game/: README.md  game.py  pyproject.toml
examples/hello_world_cli_game/tests/: test_game.py
policies/: default.yaml  legacy.yaml  prototype.yaml  security_sensitive.yaml  strict.yaml
prompts/: ceremony_master.md  coder.md  product_designer.md  reviewer.md
tests/: test_agents.py  test_anthropic_adapter.py  test_archetypes.py  test_architecture_artifacts.py  test_architecture_synthesizer.py  test_assumptions.py  test_backlog_graph.py  test_benchmarks.py  test_config.py  test_control_plane.py  test_credentials.py  test_diffing.py  test_engine.py  test_evals.py  test_evidence.py  test_fake_provider.py  test_fixture_adapters.py  test_gemini_adapter.py  test_git_tools.py  test_impact_analysis.py  test_logging.py  test_migration.py  test_observation.py  test_openai_adapter.py  test_policy.py  test_preview.py  test_product_brief.py  test_providers.py  test_readiness.py  test_repo_discovery.py  test_risk.py  test_router.py  test_run_graph.py  test_run_graph_runtime.py  (+6 more)
(+211 files in other folders)
