[project]
name = "hello-world-cli-game"
version = "0.1.0"
requires-python = ">=3.12"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.11.0",
  "ty>=0.0.1a18",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ty.src]
include = ["game.py", "tests"]
